Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Coding through life and life through coding.</p>
+<p>The truth is there will never ever be another #{current_date} again in life. This fact of life is humbling yet motivating.</p>
